Updated some deprecated code